--- a/Study/WpfDemoSolution/WpfDemo1/WpfDemo1.csproj
+++ b/Study/WpfDemoSolution/WpfDemo1/WpfDemo1.csproj
@@ -7,4 +7,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Contacts.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+
 </Project>
